fix: header and page spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,5 +5,5 @@
 .App {
   background-color: $background-colour;
   min-height: calc(100vh - 1rem);
-  padding: 4rem 0 5rem 0;
+  padding: 6rem 0 6rem 0;
 }
