--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,8 +1,7 @@
 @use "../../sass/abstract/variables.scss" as *;
 
 .main {
-  padding: $mobile-spacing-side;
-
   &__container {
+    padding: 0 $mobile-spacing-side;
   }
 }
